kickseed (0.51) UNRELEASED; urgency=low

  * Add initial LVM support (LP: #120377). There are probably still some
    warts here.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Feb 2009 01:00:24 +0000

kickseed (0.50) unstable; urgency=low

  * Use new mountmedia command, instead of mountfloppy.
  * load-floppy renamed to load-media.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 14:10:57 -0400

kickseed (0.49) unstable; urgency=low

  * Adjust 'bootloader --md5pass' for changes in grub-installer 1.31
    (LP: #221501).
  * Use 'sed -i' to change /target/etc/nsswitch.conf (thanks, Christer
    Edwards).

 -- Colin Watson <cjwatson@debian.org>  Sun, 01 Jun 2008 14:15:11 +0100

kickseed (0.48) unstable; urgency=low

  [ Colin Watson ]
  * Allow 'preseed' to take just two arguments, equivalent to an empty
    value.

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 11:05:25 -0200

kickseed (0.47) unstable; urgency=low

  * Set Maintainer to debian-boot.
  * Use in-target to run chrooted %post scripts.
  * Use /lib/partman/display.d rather than /lib/partman/auto.d.

 -- Colin Watson <cjwatson@debian.org>  Sun, 28 Oct 2007 15:26:48 +0000

kickseed (0.46) unstable; urgency=low

  * Moved to d-i SVN; maintaining it here henceforth.
  * Update copyright dates.
  * Remove Ubuntu-specific hostname in setup/net.
  * Unbrand an Ubuntu-specific error message.
  * Remove some old base-config cruft.
  * The Ubuntu standard tasks are now just called 'standard', and this makes
    more sense for Debian too.

 -- Colin Watson <cjwatson@debian.org>  Fri, 05 Oct 2007 14:49:18 +0100

kickseed (0.45) gutsy; urgency=low

  * Make ksdevice=link equivalent to leaving out ksdevice, since that's
    netcfg's default behaviour.
  * Make ksdevice=bootif emit a warning and be equivalent to leaving out
    ksdevice for now. Once netcfg supports being preseeded with a MAC
    address, this can be supported.
  * Support 'part swap --recommended' (thanks, Rohit Kumar Mehta).