@@ -122,9 +122,12 @@ partition_handler () {
 		if [ "$grow" ]; then
 			partition_leave_free_space=
 			if [ -z "$maxsize" ]; then
-				maxsize=$((1024 * 1024 * 1024))
+				priority=$((1024 * 1024 * 1024))
+				# requires partman-auto 84, partman-auto-lvm 32
+				maxsize=-1
+			else
+				priority="$maxsize"
 			fi
-			priority="$maxsize"
 		else
 			maxsize="$size"
 			priority="$size"
@@ -183,7 +186,8 @@ partition_final () {
 			# partition at the end of the disk. Bug filed on
 			# partman-auto.
 			bignum=$((1024 * 1024 * 1024))
-			partition_recipe="$partition_recipe 0 $bignum $bignum free ."
+			# requires partman-auto 84, partman-auto-lvm 32
+			partition_recipe="$partition_recipe 0 $bignum -1 free ."
 		fi
 		ks_preseed d-i partman-auto/expert_recipe string \
 			"$partition_recipe"
