@@ -2,6 +2,9 @@ kickseed (0.51) UNRELEASED; urgency=low
 
   * Add initial LVM support (LP: #120377). There are probably still some
     warts here.
+  * Use new-style "-1" instead of a big number (1024 * 1024 * 1024) to
+    indicate unlimited partition size in partman recipes, following
+    partman-auto 84 and partman-auto-lvm 32.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Feb 2009 01:00:24 +0000
 
